[gd_scene load_steps=7 format=3 uid="uid://xhbk20kbj86h"]

[ext_resource type="Theme" uid="uid://cnr58ylpoc7ci" path="res://theme/chat_theme.tres" id="1_bnydp"]
[ext_resource type="Script" path="res://scenes/screen/menu/menu.gd" id="2_c57qn"]
[ext_resource type="Texture2D" uid="uid://bittaey1sxw2t" path="res://assets/img/1659875.jpg" id="3_5vhr1"]
[ext_resource type="PackedScene" uid="uid://drib7q5p8768m" path="res://scenes/level/game/game.tscn" id="3_j8m5q"]
[ext_resource type="PackedScene" path="res://scenes/screen/create_account/create_account.tscn" id="4_5w52p"]
[ext_resource type="PackedScene" path="res://scenes/ui/loading_component/loading_component.tscn" id="4_hdogn"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bnydp")
script = ExtResource("2_c57qn")
game_scene = ExtResource("3_j8m5q")
create_account_scene = ExtResource("4_5w52p")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5vhr1")
expand_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -136.0
offset_right = 100.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"TopBarPanel"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Container" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="EmailField" type="VBoxContainer" parent="PanelContainer/MarginContainer/Container"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="EmailLabel" type="Label" parent="PanelContainer/MarginContainer/Container/EmailField"]
layout_mode = 2
theme_type_variation = &"FormLabel"
text = "E-mail"

[node name="EmailTextEdit" type="LineEdit" parent="PanelContainer/MarginContainer/Container/EmailField"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
text = "eranot@eranot.com.br"

[node name="PasswordField" type="VBoxContainer" parent="PanelContainer/MarginContainer/Container"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PasswordLabel" type="Label" parent="PanelContainer/MarginContainer/Container/PasswordField"]
layout_mode = 2
theme_type_variation = &"FormLabel"
text = "Senha"

[node name="PasswordTextEdit" type="LineEdit" parent="PanelContainer/MarginContainer/Container/PasswordField"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4
text = "12345678"
secret = true

[node name="LoginButton" type="Button" parent="PanelContainer/MarginContainer/Container"]
layout_mode = 2
text = "Entrar
"

[node name="FormErrorComponent" type="RichTextLabel" parent="PanelContainer/MarginContainer/Container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[color=#ff6459]Falha na autenticação![/color]"
fit_content = true

[node name="LabelCadastro" type="RichTextLabel" parent="PanelContainer/MarginContainer/Container"]
layout_mode = 2
bbcode_enabled = true
text = "Ainda não tem uma conta? [url=some_link]Crie aqui[/url]"
fit_content = true

[node name="LoadingComponent" parent="." instance=ExtResource("4_hdogn")]
unique_name_in_owner = true
layout_mode = 1
is_loading = false

[connection signal="text_submitted" from="PanelContainer/MarginContainer/Container/PasswordField/PasswordTextEdit" to="." method="_on_password_text_edit_text_submitted"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Container/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="meta_clicked" from="PanelContainer/MarginContainer/Container/LabelCadastro" to="." method="_on_rich_text_label_meta_clicked"]
